--- a/style.css
+++ b/style.css
@@ -1,1 +1,200 @@
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    text-decoration: none;
+    list-style: none;
+    font-family: 'Times New Roman', Times, serif;
+    background: black;
+}
 
+.container {
+    background: black;
+    width: 100%;
+    height: 100vh;
+}
+
+.NAVIGATION {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background: black;
+    color: rgb(255, 0, 0);
+    height: 80px;
+    width: 100%;
+}
+
+.webtittle {
+    color: crimson;
+    font-size: 3rem;
+    font-weight: bold;
+    margin-left: 3rem;
+}
+
+.options {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    gap: 1rem;
+    margin-right: 3rem;
+    width: 50%;
+  }
+  
+  .option {
+    font-weight: bold;
+    border-radius: 5px;
+    padding: 0.8rem;
+  }
+  .option:hover {
+    background: #e50914;
+    color: #fff;
+  }
+  
+  .navsearch {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 50%;
+  }
+  
+  .searchbar {
+    background: #fff;
+    border-radius: 20px;
+    width: 100%;
+    max-width: 300px;
+    margin-right: 3%;
+    height: 30px;
+    display: flex;
+    align-items: center;
+    padding: 5px;
+  }
+  
+  .searchicon {
+    margin-right: 5px;
+  }
+  
+  .searchbar input[type='text'] {
+    border: none;
+    outline: none;
+    flex: 1;
+    font-size: 14px;
+  }
+  
+  .movies-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    grid-gap: 20px;
+    margin: 1.5rem;
+  }
+  
+  .movie {
+    background-color: #000;
+    padding: 10px;
+    border-radius: 10px;
+    text-align: center;
+    overflow: hidden;
+  }
+  
+  .movie img {
+    width: 100%;
+    max-height: 300px;
+    object-fit: cover;
+    border-radius: 5px;
+  }
+  
+  .title {
+    font-size: 18px;
+    margin: 10px 0;
+    color: white;
+  }
+  
+  .votes {
+    font-size: 14px;
+    color: goldenrod;
+  }
+  
+  .button-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 50px;
+    margin: 1rem;
+  }
+  
+  .loadmorebtn {
+    background: #000;
+    color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0.5rem;
+    border-radius: 10px;
+    font-weight: bold;
+  }
+  
+  .hidden {
+    display: none;
+  }
+  
+  .exit {
+    background: transparent;
+    font-weight: bolder;
+    border: none;
+    font-size: 1.5rem;
+    cursor: pointer;
+    margin-top: 0.5rem;
+    margin-left: 1.5rem;
+    padding: 0.5rem;
+    border-radius: 5px;
+    transition: 200ms;
+  }
+  
+  .exit:hover {
+    background: black;
+    color: #fff;
+  }
+
+  @media (max-width: 768px) {
+    .navbar {
+      height: 120px;
+    }
+  
+    .options {
+      display: none;
+    }
+  
+    .searchbar {
+      margin-right: 0;
+      width: 100%;
+    }
+  
+    .navsearch {
+      width: 100%;
+    }
+  
+    .webtitle {
+      margin-left: 1rem;
+      font-size: 2rem;
+    }
+  
+    /* Added CSS for small screens */
+    .navbar {
+      flex-direction: column;
+      align-items: flex-start;
+      padding: 1rem;
+    }
+  
+    .options {
+      margin-top: 1rem;
+      width: 100%;
+    }
+  
+    .option {
+      width: 100%;
+    }
+  }
+  
+  .pop-up {
+    width: 70%;
+  }
