--- a/style.css
+++ b/style.css
@@ -1,206 +1,332 @@
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    text-decoration: none;
-    list-style: none;
-    font-family: 'Times New Roman', Times, serif;
-    background: black;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+  list-style: none;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
-
 .container {
-    background: black;
-    width: 100%;
-    height: 100vh;
+  position: relative;
+  min-height: 100vh;
+  background: turquoise;
 }
 
 .NAVIGATION {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background: black;
-    color: rgb(255, 0, 0);
-    height: 80px;
-    width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background: cornflowerblue;
+  color: #e50914;
+  height: 80px;
+  width: 100%;
 }
 
-.webtittle {
-    color: crimson;
-    font-size: 3rem;
-    font-weight: bold;
-    margin-left: 3rem;
+.webtitle {
+  color: black;
+  font-size: 3rem;
+  font-weight: bold;
+  margin-right: 3rem;
+
 }
 
 .options {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    gap: 1rem;
-    margin-right: 3rem;
-    width: 50%;
-  }
-  
-  .option {
-    font-weight: bold;
-    border-radius: 5px;
-    padding: 0.8rem;
-  }
-  .option:hover {
-    background: #e50914;
-    color: #fff;
-  }
-  
-  .navsearch {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 50%;
-  }
-  
-  .searchbar {
-    background: #fff;
-    border-radius: 20px;
-    width: 100%;
-    max-width: 300px;
-    margin-right: 3%;
-    height: 30px;
-    display: flex;
-    align-items: center;
-    padding: 5px;
-  }
-  
-  .searchicon {
-    margin-right: 5px;
-  }
-  
-  .searchbar input[type='text'] {
-    border: none;
-    outline: none;
-    flex: 1;
-    font-size: 14px;
-    color: #fff;
-  }
-  
-  .movies-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-    grid-gap: 20px;
-    margin: 1.5rem;
-  }
-  
-  .movie {
-    background-color: #000;
-    padding: 10px;
-    border-radius: 10px;
-    text-align: center;
-    overflow: hidden;
-  }
-  
-  .movie:hover {
-    transform: scale(1.09);
-    background: bisque;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  gap: 1rem;
+  margin-right: 3rem;
+  width: 50%;
+}
 
-  }
-  .movie img {
-    width: 100%;
-    max-height: 300px;
-    object-fit: cover;
-    border-radius: 5px;
-  }
-  
-  .title {
-    font-size: 18px;
-    margin: 10px 0;
-    color: white;
-  }
-  
-  .votes {
-    font-size: 14px;
-    color: goldenrod;
-  }
-  
-  .button-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 50px;
-    margin: 1rem;
-  }
-  
-  .loadmorebtn {
-    background: #000;
-    color:red;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 0.5rem;
-    border-radius: 10px;
-    font-weight: bold;
-  }
-  
-  .hidden {
+.option {
+  font-weight: bold;
+  border-radius: 5px;
+  padding: 0.8rem;
+}
+.option:hover {
+  background: #e50914;
+  color: #fff;
+}
+
+.navsearch {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 50%;
+}
+
+.searchbar {
+  background: #fff;
+  border-radius: 20px;
+  width: 100%;
+  max-width: 300px;
+  margin-right: 3%;
+  height: 30px;
+  display: flex;
+  align-items: center;
+  padding: 5px;
+}
+
+.searchicon {
+  margin-right: 5px;
+}
+
+.searchbar input[type='text'] {
+  border: none;
+  outline: none;
+  flex: 1;
+  font-size: 14px;
+}
+
+.movies-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  grid-gap: 20px;
+  margin: 1.5rem;
+}
+
+.movies-grid .movie-card {
+  background-color: #000;
+  padding: 10px;
+  border-radius: 10px;
+  text-align: center;
+  overflow: hidden;
+  transition: transform 0.3s ease-in-out;
+}
+
+.movie-card:hover {
+  transform: scale(1.09);
+  background: #303030;
+}
+
+.movie-card img {
+  width: 100%;
+  max-height: 300px;
+  object-fit: cover;
+  border-radius: 5px;
+  transition: 200ms;
+  cursor: pointer;
+}
+
+.title {
+  font-size: 18px;
+  margin: 10px 0;
+  color: white;
+}
+
+.votes {
+  font-size: 14px;
+  color: goldenrod;
+}
+
+.button-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 50px;
+  margin: 1rem;
+}
+
+.loadmorebtn {
+  background: #000;
+  color: whitesmoke;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.5rem;
+  border-radius: 10px;
+  font-weight: bold;
+}
+
+.hidden {
+  display: none;
+}
+
+.exit {
+  background: white;
+  font-weight: bolder;
+  border: none;
+  font-size: 1rem;
+  cursor: pointer;
+  margin-top: 0.5rem;
+  margin-left: 1.5rem;
+  padding: 0.5rem;
+  border-radius: 5px;
+  transition: 200ms;
+  /* Add border styles */
+  border: 1px solid #000;
+}
+
+.exit:hover {
+  background: black;
+  color: white;
+  /* Adjust border color */
+  border-color: #000;
+}
+
+/* Media Queries */
+
+@media (max-width: 768px) {
+  .options {
     display: none;
   }
-  
-  .exit {
-    background: white;
-    font-weight: bolder;
-    border: none;
-    font-size: 1.5rem;
-    cursor: pointer;
-    margin-top: 0.5rem;
-    margin-left: 1.5rem;
-    padding: 0.5rem;
-    border-radius: 5px;
-    transition: 200ms;
-  }
-  
-  .exit:hover {
-    background: black;
-    color: #fff;
+
+  .searchbar {
+    margin-right: 0;
+    width: 100%;
   }
 
-  @media (max-width: 768px) {
-    .navbar {
-      height: 120px;
-    }
-  
-    .options {
-      display: none;
-    }
-  
-    .searchbar {
-      margin-right: 0;
-      width: 100%;
-    }
-  
-    .navsearch {
-      width: 100%;
-    }
-  
-    .webtitle {
-      margin-left: 1rem;
-      font-size: 2rem;
-    }
-  
-    /* Added CSS for small screens */
-    .NAVIGATION {
-      flex-direction: column;
-      align-items: flex-start;
-      padding: 1rem;
-    }
-  
-    .options {
-      margin-top: 1rem;
-      width: 100%;
-    }
-  
-    .option {
-      width: 100%;
-    }
+  .navsearch {
+    width: 100%;
   }
-  
+
+  .webtitle {
+    margin-left: 1rem;
+    font-size: 2rem;
+  }
+}
+
+@media (max-width: 480px) {
+  .webtitle {
+    margin-left: 0.5rem;
+    font-size: 1.5rem;
+  }
+
+  .movie-card img {
+    max-height: 200px;
+  }
+
+  .button-container {
+    margin: 0.5rem;
+  }
+
+  .exit {
+    font-size: 0.8rem;
+    margin-top: 0.3rem;
+    margin-left: 1rem;
+    padding: 0.3rem;
+  }
+}
+
+@media (max-width: 768px) {
+  .navbar {
+    height: 120px;
+  }
+
+  .options {
+    display: none;
+  }
+
+  .searchbar {
+    margin-right: 0;
+    width: 100%;
+  }
+
+  .navsearch {
+    width: 100%;
+  }
+
+  .webtitle {
+    margin-left: 1rem;
+    font-size: 2rem;
+  }
+
+  /* Added CSS for small screens */
+  .NAVIGATION {
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 1rem;
+  }
+
+  .options {
+    margin-top: 1rem;
+    width: 100%;
+  }
+
+  .option {
+    width: 100%;
+  }
+}
+
+.container .pop-up-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: blue(0, 0, 0, 0.9);
+  height: 100%;
+  width: 100%;
+  z-index: 100;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  display: none;
+}
+
+.container .pop-up {
+  height: 70%;
+  width: 60%;
+  border-radius: 10px;
+  background-color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  flex-direction: column;
+  padding: 1.5rem;
+}
+
+.pop-up p {
+  font-size: 2rem;
+}
+
+.pop-up-container span {
+  position: absolute;
+  top: 0;
+  right: 10px;
+  font-size: 40px;
+  font-weight: bold;
+  color: palegreen;
+  cursor: pointer;
+}
+
+.exit {
+  background: white;
+  font-weight: bolder;
+  border: none;
+  font-size: 1.5rem;
+  cursor: pointer;
+  margin-top: 0.5rem;
+  margin-left: 1.5rem;
+  padding: 0.5rem;
+  border-radius: 5px;
+  transition: 200ms;
+}
+
+.exit:hover {
+  background: black;
+  color: #fff;
+}
+@media (max-width: 786px) {
   .pop-up {
-    width: 70%;
+    width: 90%;
   }
+}
+
+.detailsDiv {
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  flex-direction: column;
+  margin: 0.5rem;
+  gap: 0.5rem;
+  align-items: start;
+}
+
+.movietitle {
+  font-size: 1.5rem;
+}
