navbar color change>

--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background: cornflowerblue;
+  background: limegreen;
   color: #e50914;
   height: 80px;
   width: 100%;
